--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!--CSS-->
-    <link rel="stylesheet" href="./css/main.scss" />
+    <link rel="stylesheet" href="./css/basic.scss" />
+    <link rel="stylesheet" href="./css/style.scss" />
     <!--FontAwesome-->
     <link
       rel="stylesheet"
@@ -19,19 +20,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <h1>Ceci est un test</h1>
-    <i class="fa-solid fa-cart-shopping"></i>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-      officiis accusamus, impedit magnam vero nam laboriosam sapiente ad
-      explicabo, hic inventore quos ipsa dicta maxime eius. Sed expedita quidem
-      nulla?
-    </p>
-    <button>test</button>
+    <header>
+      <h2>Header</h2>
+      <i class="fa-solid fa-crow"></i>
+      <p>Account</p>
+    </header>
+    <main>
+      <h1>Ceci est un test</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis eaque
+        omnis est recusandae reprehenderit hic accusamus tempore error itaque
+        fuga, molestiae voluptatem sapiente voluptatum sint, iusto praesentium
+        commodi eligendi nesciunt?Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Facilis eaque omnis est recusandae reprehenderit hic
+        accusamus tempore error itaque fuga, molestiae voluptatem sapiente
+        voluptatum sint, iusto praesentium commodi eligendi nesciunt?Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Facilis eaque omnis est
+        recusandae reprehenderit hic accusamus tempore error itaque fuga,
+        molestiae voluptatem sapiente voluptatum sint, iusto praesentium commodi
+        eligendi nesciunt?Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Facilis eaque omnis est recusandae reprehenderit hic accusamus
+        tempore error itaque fuga, molestiae voluptatem sapiente voluptatum
+        sint, iusto praesentium commodi eligendi nesciunt?Lorem ipsum dolor sit
+        amet consectetur adipisicing elit. Facilis eaque omnis est recusandae
+        reprehenderit hic accusamus tempore error itaque fuga, molestiae
+        voluptatem sapiente voluptatum sint, iusto praesentium commodi eligendi
+        nesciunt?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Facilis eaque omnis est recusandae reprehenderit hic accusamus tempore
+        error itaque fuga, molestiae voluptatem sapiente voluptatum sint, iusto
+        praesentium commodi eligendi nesciunt?Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Facilis eaque omnis est recusandae
+        reprehenderit hic accusamus tempore error itaque fuga, molestiae
+        voluptatem sapiente voluptatum sint, iusto praesentium commodi eligendi
+        nesciunt?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Facilis eaque omnis est recusandae reprehenderit hic accusamus tempore
+        error itaque fuga, molestiae voluptatem sapiente voluptatum sint, iusto
+        praesentium commodi eligendi nesciunt?Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Facilis eaque omnis est recusandae
+        reprehenderit hic accusamus tempore error itaque fuga, molestiae
+        voluptatem sapiente voluptatum sint, iusto praesentium commodi eligendi
+        nesciunt?
+      </p>
+      <button>test</button>
+    </main>
   </body>
 </html>
