--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="./css/basic.scss" />
     <link rel="stylesheet" href="./css/style.scss" />
+    <link rel="stylesheet" href="./css/responsive.scss" />
     <!--FontAwesome-->
     <link
       rel="stylesheet"
